# fknc-calculator

./: .gitattributes  .gitignore  LICENSE.src.md  README.md  build.ps1  build_apk.sh  download_pic.py  update.py
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: game_data.json  index.js  lib.rs  main.rs
src/assets/: index-BKh7obpC.js  index-CFyJiB0b.js  index-CIyMZ-Re.js  index-CcTJAZpX.css  index-oOwWjGI1.js  index.css  index.js
