cargo-features = ["panic-immediate-abort"]

[package]
name = "fknc-calculator"
version = "0.2.3"
description = "疯狂农场果实价格计算器"
authors = ["mokurin000"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fknc_calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
lto = true
strip = true
panic = "immediate-abort"
opt-level = "z"
